# fastapi-ms

./: .env.example  README.md  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  release.yml
DBService/: .env.example  Dockerfile  alembic.ini  pyproject.toml
DBService/migrations/: env.py
DBService/migrations/versions/: 0001_initial.py
DBService/src/: config.py  container.py  main.py
DBService/src/application/: dto.py
DBService/src/application/use_cases/: register_connection.py  run_text2sql.py
DBService/src/domain/: events.py  exceptions.py  models.py
DBService/src/domain/ports/: publisher.py  query_executor.py  repository.py  schema_reader.py  sql_generator.py  unit_of_work.py
DBService/src/infrastructure/db_introspection/: sqlalchemy_schema_reader.py
DBService/src/infrastructure/messaging/: outbox_publisher.py
DBService/src/infrastructure/persistence/postgres/: repository.py  unit_of_work.py
DBService/src/infrastructure/persistence/postgres/models/: connection_orm.py  outbox_orm.py  user_orm.py
DBService/src/infrastructure/query_execution/: sqlalchemy_executor.py
DBService/src/infrastructure/sql_generation/: pruner_generator.py
DBService/src/interfaces/http/: dependencies.py  exception_handlers.py  schemas.py
DBService/src/interfaces/http/api/v1/: connections.py  query.py
DBService/tests/integrations/: conftest.py  test_run_text2sql.py
DBService/tests/unit/application/: test_run_text2sql.py
MLService/: Dockerfile  docker-compose.yaml  pyproject.toml
MLService/configs/model/: xgboost.yaml
MLService/configs/tracking/: mlflow.yaml
MLService/configs/train/: dev.yaml
MLService/scripts/: serve.py  train.py
MLService/src/mlservice/core/: config.py  logging.py
MLService/src/mlservice/data/: ingestion.py  preprocessing.py
MLService/src/mlservice/models/: base.py  evaluator.py  inference.py  registry.py  trainer.py
MLService/src/mlservice/pipelines/: inference.py  training.py
MLService/src/mlservice/tracking/: mlflow.py
PostgresDB/: pg_hba.conf  postgresql.conf
PostgresDB/init/: 01_create_database.sql  02_create_schemas.sql  03_create_roles.sh  03_create_roles.sql  04_grant_permissions.sql
SubscriptionService/: .env.example  Dockerfile  README.md  pyproject.toml
SubscriptionService/migrations/: env.py
SubscriptionService/migrations/versions/: 0001_initial.py
SubscriptionService/src/: config.py  container.py  main.py
SubscriptionService/src/application/: dto.py  services.py
SubscriptionService/src/application/use_cases/: activate_subscription.py  create_checkout_session.py  create_subscription.py  get_subscription.py  handle_webhook.py  update_subscription.py
SubscriptionService/src/domain/: events.py  exceptions.py  models.py
SubscriptionService/src/domain/ports/: payment.py  publisher.py  repository.py  unit_of_work.py
SubscriptionService/src/infrastructure/clients/: stripe_client.py
SubscriptionService/src/infrastructure/messaging/: outbox_publisher.py
SubscriptionService/src/infrastructure/persistence/postgres/: repository.py  unit_of_work.py
SubscriptionService/src/infrastructure/persistence/postgres/models/: outbox_orm.py  subscription_orm.py
SubscriptionService/src/interfaces/consumers/: event_registry.py  kafka_handlers.py
SubscriptionService/src/interfaces/http/: auth.py  dependencies.py  exception_handlers.py  schemas.py
SubscriptionService/src/interfaces/http/api/v1/: subscriptions.py
SubscriptionService/src/subscriptionservice/: __init__.py
UserService/: .dockerignore  .env.example  Dockerfile  pyproject.toml
UserService/migrations/: env.py
UserService/migrations/versions/: 0001_initial.py
UserService/src/: config.py  container.py  main.py
UserService/src/application/: dto.py  password_hasher.py  services.py
UserService/src/application/use_cases/: authenticate_user.py  create_user.py  deactivate_user.py  get_user.py  reset_password.py
UserService/src/domain/: events.py  exceptions.py  models.py
UserService/src/domain/ports/: repository.py  unit_of_work.py
UserService/src/infrastructure/messaging/: outbox_publisher.py
UserService/src/infrastructure/persistence/postgres/: repository.py  unit_of_work.py
UserService/src/infrastructure/persistence/postgres/models/: outbox_orm.py  user_orm.py
UserService/src/interfaces/consumers/: event_registry.py  kafka_handlers.py
UserService/src/interfaces/http/: auth.py  dependencies.py  exception_handlers.py  schemas.py
UserService/src/interfaces/http/api/v1/: auth.py  users.py
UserService/src/userservice/: __init__.py
contracts/: events.py  pyproject.toml  topics.py
debezium/: bootstrap.sh
debezium/connectors/: subscriptions-outbox.json  users-outbox.json
libs/shared-core/: pyproject.toml
libs/shared-core/src/shared_core/: __init__.py
libs/shared-infra/: pyproject.toml
libs/shared-infra/src/shared_infra/: __init__.py
libs/shared_core/: base_aggregate.py  base_event.py  pyproject.toml
libs/shared_core/src/shared_core/: base_aggregate.py  security.py
libs/shared_infra/: kafka_consumer_base.py  pyproject.toml
libs/shared_infra/src/shared_infra/: auth.py  health.py  kafka_consumer_base.py  logging.py  metrics.py  middleware.py  observability.py
scripts/: wait_for_services.sh
