[project]
name = "fastapi-ms"
version = "0.1.0"
description = "fastapi microservice"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
]

[tool.uv.workspace]
members = [
    "libs/shared-core",
    "libs/shared-infra",
    "UserService",
    "SubscriptionService",
]

[tool.pyright]
# Pylance uses Pyright settings
include = ["UserService/src", "SubscriptionService/src", "libs"]
executionEnvironments = [
  { root = "UserService" },
  { root = "SubscriptionService" }
]

[dependency-groups]
dev = []
