[project]
name = "fastapi-ms"
version = "0.1.0"
description = "fastapi microservice"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "asyncpg>=0.31.0",
]

[tool.uv.workspace]
members = [
    "libs/shared_core",
    "libs/shared_infra",
    "contracts",
    "UserService",
    "SubscriptionService",
    "MLService",
]

[tool.pyright]
include = ["UserService/src", "SubscriptionService/src", "libs", "contracts"]
extraPaths = ["libs", "contracts"]
venvPath = "."
venv = ".venv"
executionEnvironments = [
  { root = "UserService", extraPaths = ["libs", "."] },
  { root = "SubscriptionService", extraPaths = ["libs", "."] }
]

[dependency-groups]
dev = []
