[project]
name = "dbservice"
version = "0.1.0"
description = "DB Service — Text-to-SQL"
readme = "README.md"
requires-python = ">=3.10,<3.15"

dependencies = [
    "aiomysql>=0.2.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "contracts",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.2.0",
    "shared_core",
    "shared_infra",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.29.0",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
shared_core  = { workspace = true }
shared_infra = { workspace = true }
contracts    = { workspace = true }
