[project]
name = "userservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alos", email = "daryoosh.safe@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
]

[project.scripts]
userservice = "userservice:main"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"
