[project]
name = "contracts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alos", email = "daryoosh.safe@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"contracts" = "."}
packages = ["contracts"]