[project]
name = "shared-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alos", email = "daryoosh.safe@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
shared-core = "shared_core:main"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"
