[project]
name = "shared_infra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alos", email = "daryoosh.safe@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiokafka>=0.14.0",
]

[project.scripts]
shared_infra = "shared_infra:main"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"
