[project]
name = "shared_infra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alos", email = "daryoosh.safe@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiokafka>=0.14.0",
    "fastapi>=0.136.1",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "structlog>=25.1.0",
    "shared_core",
]

[tool.uv.sources]
shared_core = { workspace = true }

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"
